# MTG

./: AUTHOTS  CMakeLists.txt  ChangeLog  README  conanfile.py
cmake/: MTGConfig.cmake.in
include/: mtg_engine.hpp
src/: CMakeLists.txt
src/Engine/: CMakeLists.txt
src/Engine/include/: mtg_events.hpp  mtg_game.hpp  mtg_global.hpp  mtg_human.hpp  mtg_observer.hpp  mtg_player.hpp  mtg_robot.hpp  mtg_types.hpp  mtg_view.hpp
src/Engine/src/: mtg_events.cpp  mtg_game.cpp  mtg_human.cpp  mtg_observer.cpp  mtg_player.cpp  mtg_robot.cpp  mtg_types.cpp  mtg_view.cpp
src/MTG/: CMakeLists.txt
src/MTG/include/: file_system.hpp  mtg_board_view.hpp  mtg_cards_view.hpp  mtg_game_view.hpp  mtg_log_view.hpp  mtg_player_view.hpp
src/MTG/res/: mtg.qrc
src/MTG/src/: main.cpp  mtg_board_view.cpp  mtg_cards_view.cpp  mtg_game_view.cpp  mtg_log_view.cpp  mtg_player_view.cpp
src/MTG/ui/: board_view.ui  game_view.ui  log_view.ui  mtg_game_view.ui  mtg_log_view.ui  player_view.ui  splash_view.ui
tests/: CMakeLists.txt
tests/TestEngine/: CMakeLists.txt  main.cpp
