cmake_minimum_required(VERSION 3.6)


set(ENGINE_NAME MTG_Engine)

file(GLOB_RECURSE SOURCES_CPP ${CMAKE_CURRENT_SOURCE_DIR}/src "*.cpp")
file(GLOB_RECURSE HEADERS_HPP ${CMAKE_CURRENT_SOURCE_DIR}/include "*.hpp")
file(GLOB_RECURSE SOURCES_C ${CMAKE_CURRENT_SOURCE_DIR}/src "*.c")
file(GLOB_RECURSE HEADERS_H ${CMAKE_CURRENT_SOURCE_DIR}/include "*.h")

add_library(${ENGINE_NAME} ${LIB_MODE} ${SOURCES_CPP} ${HEADERS_HPP} ${SOURCES_C} ${HEADERS_H})
target_compile_definitions(${ENGINE_NAME} 
	PRIVATE
		MTG_ENGINE_LIB
)

#target_link_libraries(${VG_CORE_NAME})
target_include_directories( "${ENGINE_NAME}"
    PUBLIC
       $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
)

install(TARGETS ${ENGINE_NAME}
  EXPORT ${PROJECT_TARGETS}
  RUNTIME DESTINATION "${INSTALL_BIN_DIR}"
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}"
  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
  #PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}"
 )
 
 export(TARGETS ${ENGINE_NAME} FILE ${EXPORT_FILE})