cmake_minimum_required(VERSION 2.8)

set(MTG_GAME_NAME MTG_Game)

set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON) 

find_package(Qt5Widgets REQUIRED)
find_package(MTG REQUIRED)

file(GLOB_RECURSE SOURCES_CPP ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")
file(GLOB_RECURSE HEADERS_HPP ${CMAKE_CURRENT_SOURCE_DIR} "*.hpp")
file(GLOB_RECURSE SOURCES_C ${CMAKE_CURRENT_SOURCE_DIR} "*.c")
file(GLOB_RECURSE HEADERS_H ${CMAKE_CURRENT_SOURCE_DIR} "*.h")
file(GLOB_RECURSE UIS ${CMAKE_CURRENT_SOURCE_DIR} "*.ui")
file(GLOB_RECURSE RES ${CMAKE_CURRENT_SOURCE_DIR} "*.qrc")

QT5_WRAP_UI(UIS_HDRS ${UIS})
QT5_ADD_RESOURCES(RES_RCC ${RES})

if(DEFINED MSVC) 
  add_executable(${MTG_GAME_NAME} WIN32 ${SOURCES_CPP} ${HEADERS_HPP} ${SOURCES_C} ${HEADERS_H} ${UIS_HDRS} ${RES_RCC})
  if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set_target_properties(${MTG_GAME_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:CONSOLE")
  else() 
    set_target_properties(${MTG_GAME_NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
  endif()
else() 
  if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_executable(${MTG_GAME_NAME} ${SOURCES_CPP} ${HEADERS_HPP} ${SOURCES_C} ${HEADERS_H} ${UIS_HDRS} ${RES_RCC})
  else()
    add_executable(${MTG_GAME_NAME} WIN32 ${SOURCES_CPP} ${HEADERS_HPP} ${SOURCES_C} ${HEADERS_H} ${UIS_HDRS} ${RES_RCC})
  endif()
endif(DEFINED MSVC)

if(BUILD_GAME_ROBOTS)
	set(GAME_ROBOTS "GAME_ROBOTS")
endif(BUILD_GAME_ROBOTS)

target_compile_definitions(${MTG_GAME_NAME} 
	PRIVATE
		${Qt5Widgets_DEFINITIONS}
		${GAME_ROBOTS}
)
target_link_libraries(${MTG_GAME_NAME} ${Qt5Widgets_LIBRARIES} ${MTG_ENGINE_LIBRARIES})
target_include_directories( "${MTG_GAME_NAME}"
    PRIVATE
       $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
      # $<BUILD_INTERFACE:${Qt5Widgets_INCLUDES}>
       $<BUILD_INTERFACE:${MTG_ENGINE_INCLUDES}> 
)

install(TARGETS ${MTG_GAME_NAME}
  EXPORT ${PROJECT_TARGETS}
  RUNTIME DESTINATION "${INSTALL_BIN_DIR}"
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}"
  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
 )

set_target_properties(${MTG_GAME_NAME} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
set_target_properties(${MTG_GAME_NAME} PROPERTIES RELWITHDEBINFO_POSTFIX ${CMAKE_RELWITHDEBINFO_POSTFIX})