cmake_minimum_required(VERSION 3.6)

find_package(MTG REQUIRED)

set(TEST_ENGINE_NAME MTG_TestEngine)

file(GLOB_RECURSE SOURCES_CPP ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")
file(GLOB_RECURSE HEADERS_HPP ${CMAKE_CURRENT_SOURCE_DIR} "*.hpp")
file(GLOB_RECURSE SOURCES_C ${CMAKE_CURRENT_SOURCE_DIR} "*.c")
file(GLOB_RECURSE HEADERS_H ${CMAKE_CURRENT_SOURCE_DIR} "*.h")

set(CMAKE_INCLUDE_CURRENT_DIR ON) 

add_executable(${TEST_ENGINE_NAME} ${SOURCES_CPP} ${HEADERS_HPP} ${SOURCES_C} ${HEADERS_H})

target_link_libraries(${TEST_ENGINE_NAME} ${MTG_ENGINE_LIBRARIES})

target_include_directories( "${TEST_ENGINE_NAME}"
    PUBLIC
       $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
       $<BUILD_INTERFACE:${MTG_ENGINE_INCLUDES}>
)

set_target_properties(${TEST_ENGINE_NAME} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
set_target_properties(${TEST_ENGINE_NAME} PROPERTIES RELWITHDEBINFO_POSTFIX ${CMAKE_RELWITHDEBINFO_POSTFIX})